--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3455,3 +3455,12 @@ CNW SBO Search Page Promotion Banner
         }
     }
 }
+
+
+/** CSS Temp Fix for Samios About Us **/
+
+.landingPageAbout {
+    .content-split-right {
+        text-align: left !important;
+    }
+}
